<resources>
    <string name="app_name">Lab3.1</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="dialog">Dialog</string>
    <string name="contact">Contact</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>

    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="phone">Phone:</string>
</resources>
